ipc/ipdl/test/ipdl/error/PUniquePtrSelfRecStruct.ipdl
//error: struct `X' is only partially defined

struct X {
    UniquePtr<X> x;
};

protocol PUniquePtrSelfRecStruct {
child: async Msg(UniquePtr<X> aa);
};
